Bug 417363 - Show the brush preset buttons in the toolbar as inactive when the current tool doesn't support editing brush presets.
Summary: Show the brush preset buttons in the toolbar as inactive when the current too...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Petrovic
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-10 01:01 UTC by cadaverous.doll
Modified: 2022-10-03 08:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Comparison of active and inactive brush editor icon in 4.2.9 appimage on Cinnamon (143.98 KB, image/png)
2020-04-24 22:11 UTC, Tiar
Details
Screenshot of the toolbar icons in 4.2.9 and in 5.0-alpha (6fc84c8) (130.44 KB, image/png)
2021-02-04 15:52 UTC, Tiar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cadaverous.doll 2020-02-10 01:01:19 UTC
SUMMARY
When you go to open the brush preset settings to alter them if a tool that isn't the brush tool is active, it will not load.

This isn't entirely an issue, but can be confusing as to why it won't load at first.

STEPS TO REPRODUCE
1. Select transform or selection tool
2. Click on brush preset settings
3. Nothing loads

OBSERVED RESULT
Nothing loads

EXPECTED RESULT
Brush presets should open

SOFTWARE/OS VERSIONS
Windows: 10


ADDITIONAL INFORMATION
This may be more of a wish list item, but if there's some visual change to the brush presets settings to let the user know 'hey, you can't use this with this tool active' to avoid the gut reaction that something is broken. Perhaps graying out the presets icon may help.
Comment 1 wolthera 2020-04-24 12:51:35 UTC
This is deliberate, I'm afraid, based on previous bug reports that said it was confusing to edit brush settings when the tool in question doesn't use them...
Comment 2 Tiar 2020-04-24 22:11:43 UTC
Created attachment 127841 [details]
Comparison of active and inactive brush editor icon in 4.2.9 appimage on Cinnamon

The reporter is asking for the indication that the brush editor cannot be used at the moment, which I agree is not clear enough. When comparing two images closely, I can see that the background of the inactive one is a shade darker than the background of the active/enabled one (and I can see that it's consistent with other buttons etc.), the problem is that this background is nearly entirely covered by the brush tip icon, so it's only maybe one pixel edge around it. The brush selection icons is more visibly different. Still:
- a beginner might not know that disabled brush selection equals disabled brush editor, too
- it's still not nearly as visible as the Opacity slider, for example
Since my native style is not from the list of allowed ones, I believe my used style is fusion.

I would vote to reopen this bug report.
Comment 3 wolthera 2020-04-25 13:16:55 UTC
I guess we can change the button then.
Comment 4 Halla Rempt 2020-05-06 13:55:37 UTC
And actually, if you press F5, the brush editor will open, even if there's no image open.
Comment 5 Tiar 2021-02-04 15:52:54 UTC
Created attachment 135424 [details]
Screenshot of the toolbar icons in 4.2.9 and in 5.0-alpha (6fc84c8)

In Krita 5.0 the buttons were made flat, which made even the slight difference that was there before disappear.
Comment 6 Tiar 2021-02-04 15:53:49 UTC
Assigning Scott since he made the icons flat.
Comment 7 Scott Petrovic 2021-02-04 17:41:19 UTC
I think we need to figure out a solution before any work could potentially be done. By assigning it to me I am guessing your goal is we are going to have a discussion in the ticket about what to do.

This is a brush preset editor that isn't limited to a currently selected brush. You can change brushes and edit any brush from this window. Are we wanting to disable the editor completely depending on what is the active tool?  

I think just making it not flat again is not a good solution. There needs to be something.

Is this really a problem that needs to be solved?
Comment 8 Bug Janitor Service 2022-10-03 00:25:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1606
Comment 9 Dmitry Kazakov 2022-10-03 08:11:53 UTC
Git commit f5c9f3276ac3f5faee1faaad56da55782fde7164 by Dmitry Kazakov, on behalf of Tom Tom Tom.
Committed on 03/10/2022 at 08:10.
Pushed by dkazakov into branch 'master'.

Allow usage of various paintop widgets without active painting tool

M  +1    -31   libs/ui/kis_paintop_box.cc

https://invent.kde.org/graphics/krita/commit/f5c9f3276ac3f5faee1faaad56da55782fde7164