Allow usage of various paintop widgets without active painting tool

BUG:417363